cambiando un poco de todo

--- a/RemoteSystemsTempFiles/.settings/org.eclipse.core.resources.prefs
+++ b/RemoteSystemsTempFiles/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//192.168.16.251/home/leandro/HMD.py=utf-8
 encoding//192.168.16.251/home/leandro/HUD.py=utf-8
 encoding//192.168.16.251/home/leandro/protocolo.py=utf-8
 encoding//192.168.16.251/home/pi/HMD.py=utf-8
